--- a/components/FooterComponent/BtnTopComponent/BtnTopComponent.module.scss
+++ b/components/FooterComponent/BtnTopComponent/BtnTopComponent.module.scss
@@ -5,6 +5,7 @@
     cursor: pointer;
     border: none;
     background-color: transparent;
+    text-decoration: underline;
 
     &:hover {
         color: var(--tertiary-color);
